# tpanel

./: CMakeLists.txt  README.md  __init__.py  tpanel_display.cpp  tpanel_display.h
home_assistant/: tpanel-squareline.yaml
lib/config/: lv_conf.h
ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/images/: ui_img_squareline_logo_100px_png.c
ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
